# decentralized-autonomous-computing

./: .gitignore  .gitmodules  .prettierignore  Anchor.toml  Cargo.toml  README.md  codama-dac.json  package-lock.json  package.json
clients/rust/: Cargo.toml
clients/rust/src/: lib.rs
clients/sdk/: .gitignore  README.md  REFACTOR_PLAN.md  package-lock.json  package.json  tsconfig.json
clients/sdk/scripts/: README.md  generate-test-keypairs.ts  list-ipfs-files.ts  load-test-keypairs.ts
clients/sdk/src/: dacClient.ts  dacPdas.ts  dacSDK.ts  index.ts  ipfsClient.ts  load-test-keypairs.ts  test.ts  types.ts  utils.ts
clients/sdk/src/dac/: configService.ts  configTypes.ts  dacMonitoring.ts  dacPdas.ts  dacQueries.ts  dacService.ts  dacSubscriptions.ts  dacTransactions.ts  dacUtils.ts  statusUtils.ts  utils.ts
clients/sdk/test-configs/: agent-config.yaml  goal-specification.yaml  network-config.yaml
docs/: OVERVIEW.md  design.md  user-stories.md
programs/dac/: Cargo.toml
programs/dac/src/: errors.rs  events.rs  lib.rs  utils.rs
programs/dac/src/instructions/: activate_node.rs  claim_compute_node.rs  claim_confidential_node.rs  claim_task.rs  claim_validator_node.rs  contribute_to_goal.rs  contribute_to_session.rs  create_agent.rs  create_goal.rs  create_session.rs  initialize_network.rs  mod.rs  register_node.rs  set_goal.rs  set_session.rs  submit_task.rs  submit_task_result.rs  submit_task_validation.rs  update_network_config.rs  validate_agent.rs  validate_compute_node.rs  validate_public_node.rs  withdraw_from_goal.rs  withdraw_from_session.rs
programs/dac/src/state/: agent.rs  contribution.rs  goal.rs  mod.rs  network_config.rs  node_info.rs  session.rs  task.rs
programs/decentralized-autonomous-civilization/: Cargo.toml
programs/decentralized-autonomous-civilization/src/: lib.rs  utils.rs
programs/decentralized-autonomous-civilization/src/instructions/: initialize_network.rs  mod.rs
programs/decentralized-autonomous-computing/: Cargo.toml
programs/decentralized-autonomous-computing/src/: lib.rs
scripts/: build_and_generate_clients.sh  convert-mermaid-to-images.js
tests/: dac.rs  decentralized-autonomous-civilization.ts  decentralized-autonomous-computing.ts
tests/setup/: accounts.rs  fixture.rs  helpers.rs  instructions.rs  mod.rs  test_data.rs
tests/utils/: Cargo.toml
tests/utils/src/: lib.rs
(+4 files in other folders)
