[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"

[package]
name = "dac-tests"
version = "0.1.0"
edition = "2021"

[[test]]
name = "dac"
path = "tests/dac.rs"


[dev-dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
litesvm = "0.8.2"
litesvm-token = "0.8.2"
solana-sdk = "3.0.0"
utils = { path = "tests/utils" }
dac-client = { path = "clients/rust" }
sha2 = "0.10"