[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"

[package]
name = "dac-tests"
version = "0.1.0"
edition = "2021"

[[test]]
name = "dac"
path = "tests/dac.rs"


[dev-dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
litesvm = { version = "0.9.0", features = ["precompiles"] }
litesvm-token = "0.9.0"
solana-sdk = "3.0.0"
solana-ed25519-program = "3.0.0"
solana-sdk-ids = "3.1.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
borsh = "1.5"
utils = { path = "tests/utils" }
dac-client = { path = "clients/rust" }
sha2 = "0.10.9"
