[package]
name = "dac-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "dac_client"
path = "src/lib.rs"

[dependencies]
borsh = "1.5"
solana-account = "3.0"
solana-account-info = "3.1"
solana-instruction = "3.0"
solana-program-error = "3.0"
solana-pubkey = "4.0"
solana-cpi = "3.1"
thiserror = "2.0.17"
num-derive = "0.4"
num-traits = "0.2.19"

[dev-dependencies]
