[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.6.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
litesvm = "0.9.0"
solana-ed25519-program = "3.0.0"
solana-sdk = "3.0.0"
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
solana-program = "3.0.0"